<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@drawable/dark_dialog"
    android:gravity="center_horizontal" >
	
    <TextView
        android:id="@+id/naslovDialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingLeft="15sp"
        android:background="@color/Titl"
        android:paddingBottom="5sp"
        android:paddingTop="5sp"
        android:text="@string/Prijava"
        android:textColor="@color/Korisnik"
        android:textSize="28sp" />
    
    <EditText
        android:id="@+id/editTextUserNameToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="37dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="46dp"
        android:background="@color/providnaPozadina"
        android:alpha="0.7"
        android:hint="@string/kor_ime"
        android:textSize="27sp"
        android:textColor="@color/Korisnik"
        android:paddingLeft="10sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextPasswordToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="46dp"
        android:background="@color/providnaPozadina"
        android:alpha="0.7"
        android:inputType="textPassword"
        android:hint="@string/loz"
        android:textSize="27sp"
        android:textColor="@color/Korisnik"
        android:paddingLeft="10sp" />

    <CheckBox
        android:id="@+id/autoLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="right"
        android:text="@string/AutoLog"
        android:textColor="@color/mainMenuText"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="fill_parent"
        android:layout_height="67dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="58dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:background="@drawable/btn_select"
        android:text="@string/Prijavi"
        android:textSize="28sp"
        android:textColor="@color/mainMenuText" />

</LinearLayout>