<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerActivity"
    android:background="@drawable/background" >
	
	<Button
        android:id="@+id/stop"
        android:padding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/Lijevo"
        android:layout_marginTop="34dp"
        android:background="@drawable/btn_select"
        android:text="@string/Stop"
        android:textColor="@color/mainMenuText"
        android:textSize="27sp" />

    <Chronometer
        android:id="@+id/minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/stop"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="130dp"
        android:text="@string/Chronometer"
        android:textColor="@color/Korisnik"
        android:textSize="37sp" />

    <EditText
        android:id="@+id/GreskaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/greska"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/Lijevo"
        android:paddingLeft="10sp"
        android:background="@color/providnaPozadina"
        android:ems="5"
        android:inputType="phone"
        android:hint="@string/GreskaHint"
        android:textColor="@color/Korisnik"
        android:textSize="25sp" >

    </EditText>

    <Button
        android:id="@+id/greska"
        android:padding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stop"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@+id/GreskaText"
        android:layout_alignParentRight="true"
        android:background="@drawable/btn_select"
        android:text="@string/Greska"
        android:textColor="@color/mainMenuText"
        android:textSize="18sp" />
    
    <Button
        android:id="@+id/start"
        android:padding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_select"
        android:text="@string/Start"
        android:textColor="@color/mainMenuText"
        android:textSize="27sp" />

</RelativeLayout>