<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_vertical"
    android:orientation="vertical" >
    	
    	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

		    <ImageView
		        android:id="@+id/imageView1"
		        android:layout_width="match_parent"
		        android:layout_height="130dp"
		        android:layout_marginTop="20dp"
		        android:contentDescription="@string/img_des"
		        android:gravity="center_vertical"
		        android:src="@drawable/logo" />
		
		    <Button
		        android:id="@+id/buttonSignIN"
		        android:layout_width="fill_parent"
		        android:layout_height="65dp"
		        android:layout_marginLeft="@dimen/Lijevo"
		        android:layout_marginRight="@dimen/Desno"
		        android:layout_marginTop="15dp"
		        android:background="@drawable/btn_select"
		        android:onClick="signIn"
		        android:text="@string/Prijavi"
		        android:textColor="@color/mainMenuText"
		        android:textSize="28sp" />
		
		    <Button
		        android:id="@+id/buttonSignUP"
		        android:layout_width="fill_parent"
		        android:layout_height="65dp"
		        android:layout_marginLeft="@dimen/Lijevo"
		        android:layout_marginRight="@dimen/Desno"
		        android:layout_marginTop="20dp"
		        android:background="@drawable/btn_select"
		        android:text="@string/Reg"
		        android:textColor="@color/mainMenuText"
		        android:textSize="28sp" />
		
		    <Button
		        android:id="@+id/Izlaz0"
		        android:layout_width="match_parent"
		        android:layout_height="65dp"
		        android:layout_gravity="bottom|right"
		        android:layout_marginLeft="@dimen/Lijevo"
		        android:layout_marginRight="@dimen/Desno"
		        android:layout_marginTop="60dp"
		        android:layout_marginBottom="20dp"
		        android:background="@drawable/btn_select"
		        android:text="@string/Izlaz"
		        android:textColor="@color/mainMenuText"
		        android:textSize="24sp" />
		    
	</LinearLayout>
</ScrollView>